# gltest

./: CMakeLists.txt  main.cpp
shaders/: tex_shader.fs  tex_shader.vs  x_offset_shader.vs
src/: camera.h  cube.h  image.h  load_texture.cpp  shader.h
